--- a/test.css
+++ b/test.css
@@ -7978,7 +7978,7 @@ fieldset:disabled .btn {
   margin-bottom: 0.5rem !important;
 }
 
-.mb-3 {
+.mb-3 {  
   margin-bottom: 1rem !important;
 }
 
@@ -7987,7 +7987,7 @@ fieldset:disabled .btn {
 }
 
 .mb-5 {
-  margin-bottom: 0rem !important;
+  margin-bottom: auto !important;
 }
 
 .mb-auto {
