--- a/test.css
+++ b/test.css
@@ -7978,7 +7978,7 @@ fieldset:disabled .btn {
   margin-bottom: 0.5rem !important;
 }
 
-.mb-3 {  
+.mb-3 {
   margin-bottom: 1rem !important;
 }
 
@@ -8254,7 +8254,7 @@ fieldset:disabled .btn {
 .py-5 {
   padding-top: 3rem !important;
   padding-bottom: 3rem !important;
-  background-image: url(../image.png);
+  background-image: url(/SaraaGrocery/image.png);
 }
 
 .pt-0 {
@@ -11898,4 +11898,18 @@ fieldset:disabled .btn {
   margin-left: auto;
   margin-right: auto;
   width: 50%;
+}
+.responsive-iframe-container {
+  position: relative;
+  overflow: hidden;
+  padding-top: 56.25%; /* 16:9 aspect ratio */
+}
+
+.responsive-iframe-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
 }
