--- a/test.css
+++ b/test.css
@@ -8254,7 +8254,7 @@ fieldset:disabled .btn {
 .py-5 {
   padding-top: 3rem !important;
   padding-bottom: 3rem !important;
-  background-image: url(../image.png);
+  background-image: url(/image.png);
 }
 
 .pt-0 {
